# Object_Detection-OpenCV

./: .gitignore  CMakeLists.txt  Evaluator.cpp  Evaluator.h  Features.cpp  Features.h  FindHomo.cpp  FindHomo.h  GoodMatches.cpp  GoodMatches.h  Main.cpp  README.md  headers.h
006_mustard_bottle/results/: 6_0001_000952-color.jpg.txt  6_0008_001625-color.jpg.txt  6_0008_002747-color.jpg.txt  6_0030_000130-color.jpg.txt  6_0030_001027-color.jpg.txt  6_0046_000002-color.jpg.txt  6_0069_000681-color.jpg.txt  6_0087_000029-color.jpg.txt
035_power_drill/results/: 35_0010_000868-color.jpg.txt  35_0030_000046-color.jpg.txt  35_0054_001329-color.jpg.txt
